--- a/css/admin.css
+++ b/css/admin.css
@@ -36,3 +36,52 @@
 .profile-actions {
   padding-left: 450px;
 }
+
+.btn-side {
+  position: absolute;
+  left: -25px;
+  transform: rotate(-90deg);
+  top: 500px;
+}
+
+.popup {
+  text-align: center;
+  position: fixed;
+  width: 500px;
+  max-height: 500px;
+  border-radius: 0.5em;
+  color: black;
+  border: 3px solid purple;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.9);
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s, visibility 0s linear 0.5s;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.visible {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.description {
+  width: 400px;
+  margin-top: 20px;
+}
+
+.popup-close {
+  color: black;
+  text-decoration: none;
+  margin-left: 460px;
+}
+
+.popup-close:hover {
+  color: purple;
+  cursor: pointer;
+}
