--- a/css/style-fix.css
+++ b/css/style-fix.css
@@ -14,6 +14,20 @@
   border: 1px solid #383d42 !important;
 }
 
+.form-control:focus {
+  box-shadow: 0 0 0 0.25rem rgba(0, 103, 255, 0.39) !important;
+}
+
+.form-control.is-valid:focus,
+.was-validated .form-control:valid:focus {
+  box-shadow: 0 0 0 0.25rem rgba(9, 233, 128, 0.53) !important;
+}
+
+.form-control.is-invalid:focus,
+.was-validated .form-control:invalid:focus {
+  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.8) !important;
+}
+
 .alert-success {
   color: #87d5a2 !important;
   background-color: #23352d !important;
